@@ -1,5 +1,11 @@
 <h1>News</h1>
 
+<h2>Version 0.8.2</h2>
+<p>
+Xjadeo version 0.8.2 fixes an issue with high CPU usage when seeking after the end of a video.
+Some further typographic errr
+</p>
+
 <h2>Version 0.8.1</h2>
 
 <p>
@@ -17,7 +23,7 @@ A complete list of changes is available as <a href="https://github.com/x42/xjade
 <h2>Version 0.8.0</h2>
 
 <p>
-Xjadeo version 0.8.0  brings a lot of significant changes. Most notably:
+Xjadeo version 0.8.0 brings a lot of significant changes. Most notably:
 </p>
 
 <ul>
