@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
-.TH XJADEO "1" "November 2014" "xjadeo version 0.8.1" "User Commands"
+.TH XJADEO "1" "June 2015" "xjadeo version 0.8.2" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -363,7 +363,7 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.1
+scm\-v0.8.2
 .IP
 compiled with: AVFORMAT=0x361d68 AVCODEC=0x363b64 AVUTIL:0x334965
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
